<resources>
    <string name="app_name">CoolTeam</string>
    <string name="app_devBy">Developed by AgileTrio</string>
    <string name="opt_1">1</string>
    <string name="opt_2">2</string>
    <string name="opt_3">3</string>
    <string name="mobile">Mobile</string>
    <string name="enter_mobile_no">Enter mobile number</string>
    <string name="send_OTP">Send OTP</string>
    <string name="enter_otp">Enter OTP sent to your mobile number</string>
    <string name="OTP">OTP</string>
    <string name="next">Next</string>
    <string name="resent_otp">Resent OTP in 30 Sec</string>
    <string name="enter_username">Enter your user name</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="search_User">Search User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>